ICE-4988: Fixed sortable data table header alignment problems.

--- a/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/rime/rime-portlet.css
+++ b/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/rime/rime-portlet.css
@@ -2554,6 +2554,10 @@ Disabled classes for the calendar controls
     display: block;
 }
 
+.iceCmdSrtHdr table {
+    display: inline;
+}
+
 .iceCmdSrtHdr-dis {
     text-decoration: none; /*border: 1px solid #ABABAB;*/
     color: #999999;
